# Constrict

./: 8mb.py  README.md  com.github.wartybix.Constrict.json  constrict.py  flatpak_local_install.sh  install.sh  io.github.wartybix.Constrict.Devel.json  io.github.wartybix.Constrict.json  meson.build  uninstall.sh  update-translations.sh
data/: com.github.wartybix.Constrict.desktop.in  com.github.wartybix.Constrict.gschema.xml  com.github.wartybix.Constrict.metainfo.xml.in  com.github.wartybix.Constrict.service.in  io.github.wartybix.Constrict.desktop.in  io.github.wartybix.Constrict.gschema.xml  io.github.wartybix.Constrict.gschema.xml.in  io.github.wartybix.Constrict.metainfo.xml.in  io.github.wartybix.Constrict.service.in  meson.build
data/icons/: meson.build
po/: Constrict.pot  LINGUAS  POTFILES.in  constrict.pot  en_GB.po  it.po  meson.build  ru.po  tr.mo  tr.po
src/: __init__.py.in  attempt_fail_box.py  attempt_fail_box.ui  constrict.gresource.xml  constrict.gresource.xml.in  constrict.in  constrict.py  constrict_cli.py  constrict_utils.py  current_attempt_box.py  current_attempt_box.ui  enums.py  error_dialog.py  error_dialog.ui  main.py  meson.build  preferences_dialog.py  preferences_dialog.ui  progress_pie.py  queued_video_row.py  queued_video_row.ui  shared.py  source_popover_box.py  source_popover_box.ui  sources_list_box.py  sources_list_box.ui  sources_row.py  sources_row.ui  window.py  window.ui
src/gtk/: help-overlay.ui  style.css
